# Skill-Library

./: .bumpversion.toml  .gitignore  CLAUDE.md  IMPLEMENTATION.md  LESSONS.md  PRD.md  PROGRESS.md  README.md  config.json  docs-alignment.json  pyproject.toml  requirements.txt  test-guide.md
.github/workflows/: ci.yml  release.yml
epics/E1-data-foundation/: EPIC.md  S1-state-schema.md  S2-config-schema.md  S3-state-readwrite.md  S4-config-readwrite.md  S5-enums.md
epics/E10-multi-agent/: EPIC.md  S1-agent-registration.md  S2-agent-isolation.md  S3-agent-filter-query.md  S4-agent-config-validation.md
epics/E11-lru-eviction/: EPIC.md  S1-max-loaded-config.md  S2-lru-evictor.md  S3-last-used-timestamp.md  S4-eviction-logging.md
epics/E12-description-quality/: EPIC.md  S1-trigger-extractor.md  S2-coverage-assessment.md  S3-third-person-detection.md  S4-optimization-suggestions.md
epics/E13-ecosystem/: EPIC.md  S1-cli-entry.md  S2-bloat-detection.md  S3-community-templates.md  S4-version-commands.md
epics/E14-skill-creators/: EPIC.md  S1-skill-creator.md  S2-workflow-creator.md
epics/E15-skill-manager-rewrite/: EPIC.md  S1-skill-md-rewrite.md  S2-references-rewrite.md  S3-scripts-adapt.md  S4-cross-refs-fix.md  S5-verification.md
epics/E16-readme-rewrite/: EPIC.md  S1-prd-doc-standards.md  S2-readme-rewrite.md  S3-verification.md
epics/E17-cli-removal/: EPIC.md  S1-delete-source.md  (+4 more)
research/: ci-cd-and-version-management.md  claude-code-skill-format.md  skill-classification-and-quality.md  skill-creator-patterns.md
scripts/: upgrade.ps1  upgrade.sh
(+189 files in other folders)
